frontend/ingress/frontend-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: frontend-ingress
spec:
  controller: k8s.io/frontend-ingress-nginx
