frontend/ingress/frontend-ingress-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ingress-controller
  namespace: jiome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-ingress-controller
  template:
    metadata:
      labels:
        app: frontend-ingress-controller
    spec:
      containers:
      - name: controller
        image: k8s.gcr.io/ingress-nginx/controller:v1.7.0
        args:
          - /nginx-ingress-controller
          - --ingress-class=frontend-ingress
          - '--controller-class=k8s.io/frontend-ingress-nginx'
        ports:
          - containerPort: 80
