frontend/ingress/frontend-ingress-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-ingress-controller
  namespace: jiome
spec:
  type: LoadBalancer
  selector:
    app: frontend-ingress-controller
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 31080
